# flashcard-website

./: LICENSE  README.md  app.py  db.py  decks_repository.py  init_database.py  pyproject.toml  routes.py  run.py  schema.sql  users.py
static/: style.css
static/js/: deleteValidator.js  registerFormValidator.js  showCardBack.js
templates/: card.html  create_deck.html  deck.html  delete.html  edit.html  edit_card.html  edit_deck.html  index.html  login.html  register.html
