[tool.poetry]
name = "tsoha"
version = "0.1.0"
description = ""
authors = ["AleksiSaxlund <115921686+AleksiSaxlund@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
